load("@rules_python//python:defs.bzl", "py_binary")
load("@lint_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "python_lint",
    srcs = ["python_lint.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        requirement("black"),
    ],
)