load("@dog_deps//:requirements.bzl", "requirement")
py_library(
    name = "srcs",
    srcs=["tail.py"],
    deps=[
        "//tubi/common:srcs",
        requirement("pyspark")
    ]
    # visibility
)

# https://github.com/bazelbuild/rules_python/issues/240
load("//tools/pytest:defs.bzl", "pytest_test")
pytest_test(
    name="tail_test",
    srcs=["tail_test.py"],
    deps=[
        ":srcs",
    ],
)


load("@bazel_distribution//pip:rules.bzl", "assemble_pip", "deploy_pip")
assemble_pip(
    name = "assemble-pip",
    package_name = "tubi-dog",
    author = "Da Shen",
    author_email = "da@tubi.tv",
    classifiers = [
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.8",
        "Intended Audience :: Developers",
        "Environment :: Console",
    ],
    description = "demo bazel monorepo for python projects",
    keywords = [
        "pyspark",
        "demo",
    ],
    license = "MIT",
    long_description_file="//tubi/dog:README.md",
    requirements_file = "//3rdparty:dog_req.txt",
    target = ":srcs",
    url = "https://github.com/da-tubi/bazel-pyspark/",
    version_file = "//tubi/dog:version.txt",
)
